# SAFER-Model-Realization

./: LICENSE  README.md  README_ZH.md  pyproject.toml  requirements-dev.txt  requirements.txt
safer_api/: app.py  routes.py
safer_cli/: main.py
safer_model/: __init__.py  bands.py  config.py  constants.py  fetcher.py  generator.py  io.py  registry.py  scorer.py
safer_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
safer_model/formulas/: __init__.py  developer.py  final_score.py  penalty.py  publisher.py  user.py
safer_model/schemas/: __init__.py  input.py  output.py
tests/: conftest.py
tests/integration/: test_cli.py  test_worked_example.py
tests/unit/: test_bands.py  test_developer_formulas.py  test_final_score_formulas.py  test_generator.py  test_penalty_formulas.py  test_publisher_formulas.py  test_user_formulas.py
